--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3" style="text-align: right">
-                        <label>{% trans 'Title' %}</label>
+                        <label>{% trans 'Title' context 'dissertation' %}</label>
                     </div>
                     <div class="col-md-9">
                         {{ dissertation.title }}
@@ -80,7 +80,7 @@
                 {% endif %}
                 <div class="row">
                     <div class="col-md-3" style="text-align: right">
-                        <label>{% trans 'Status' %}</label>
+                        <label>{% trans 'Status' context 'dissertation' %}</label>
                     </div>
                     <div class="col-md-9">
                         {% with st=dissertation.status %}
@@ -195,7 +195,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3" style="text-align: right">
-                        <label>{% trans 'Title' %}</label>
+                        <label>{% trans 'Title' context 'dissertation' %}</label>
                     </div>
                     <div class="col-md-9">
                         {{ dissertation.proposition_dissertation.title }}
