--- a/templates/dissertations_list.html
+++ b/templates/dissertations_list.html
@@ -49,9 +49,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -92,9 +92,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -135,9 +135,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -178,9 +178,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -221,9 +221,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -264,9 +264,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -307,9 +307,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </tr>
@@ -350,9 +350,9 @@
             </div>
               <table class="table table-hover" id="tb_history">
                 <thead>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Program'%}</th>
                   <th>{% trans 'year beginning'%}</th>
                 </thead>
