--- a/templates/file_upload_proposition_dissertaton_modal.html
+++ b/templates/file_upload_proposition_dissertaton_modal.html
@@ -38,6 +38,6 @@
 {% block modal_footer %}
   <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}</button>
   <button type="submit" class="btn btn-primary" name="proposition_dissertation_file_upload" form="proposition_dissertation_file_upload_form">
-    {% trans "Upload" %}
+    {% trans "Upload" context 'dissertation' %}
   </button>
 {% endblock %}
