--- a/templates/manager_dissertations_wait_recep_list.html
+++ b/templates/manager_dissertations_wait_recep_list.html
@@ -56,9 +56,9 @@
       <br>
       <table class="table table-hover" id="tb_memoire">
         <thead>
-          <th>{% trans 'Title'%}</th>
+          <th>{% trans 'Title' context 'dissertation' %}</th>
           <th>{% trans 'Author'%}</th>
-          <th>{% trans 'Status'%}</th>
+          <th>{% trans 'Status' context 'dissertation' %}</th>
           <th>{% trans 'Program'%}</th>
           <th>{% trans 'year beginning'%}</th>
           <th>{% trans 'Dissertation subject'%}</th>
