--- a/templates/manager_information_add_person.html
+++ b/templates/manager_information_add_person.html
@@ -43,7 +43,7 @@
                 <div class="alert alert-warning alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span></button>
-                    <strong>{% trans 'Warning' %} :</strong> {% trans 'This form is used to add a person to OSIS. Complete carefully the form, you will not be able to edit this person after adding.' %}
+                    <strong>{% trans 'Warning' context 'dissertation' %} :</strong> {% trans 'This form is used to add a person to OSIS. Complete carefully the form, you will not be able to edit this person after adding.' %}
                 </div>
 
             </div>
