--- a/templates/manager_informations_detail_list.html
+++ b/templates/manager_informations_detail_list.html
@@ -52,9 +52,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Start Program/Year'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_pro %}
@@ -110,9 +110,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Start Program/Year'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_copro %}
@@ -168,9 +168,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Start Program/Year'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_reader %}
@@ -226,9 +226,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Start Program/Year'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_accompanist %}
@@ -284,9 +284,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Start Program/Year'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_internship %}
@@ -342,9 +342,9 @@
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Author'%}</th>
-                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Status' context 'dissertation' %}</th>
                   <th>{% trans 'Start Program/Year'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adv_list_disserts_president %}
