--- a/templates/manager_informations_detail_list_wait.html
+++ b/templates/manager_informations_detail_list_wait.html
@@ -57,9 +57,9 @@
             {% else %}
             <table class="table table-hover" id="tb_memoire">
                 <thead>
-                    <th>{% trans 'Title' %}</th>
+                    <th>{% trans 'Title' context 'dissertation' %}</th>
                     <th>{% trans 'Author'%}</th>
-                    <th>{% trans 'Status'%}</th>
+                    <th>{% trans 'Status' context 'dissertation' %}</th>
                     <th>{% trans 'Start Program/Year'%}</th>
                     <th>{% trans 'Dissertation subject'%}</th>
                 </thead>
