--- a/templates/manager_proposition_dissertations_list.html
+++ b/templates/manager_proposition_dissertations_list.html
@@ -68,7 +68,7 @@
           {% else %}
             <table class="table table-hover" id="tb_proposition">
               <thead>
-                <th>{% trans 'Title'%}</th>
+                <th>{% trans 'Title' context 'dissertation' %}</th>
                 <th>{% trans 'Promotor'%}</th>
                 <th>{% trans 'Created by'%}</th>
                 <th>{% trans 'Maximum number of student'%}</th>
