--- a/templates/proposition_dissertations_list_my.html
+++ b/templates/proposition_dissertations_list_my.html
@@ -65,7 +65,7 @@
             {% else %}
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Title' context 'dissertation' %}</th>
                   <th>{% trans 'Promotor'%}</th>
                   <th>{% trans 'Created by'%}</th>
                   <th>{% trans 'Visibility'%}</th>
