--- a/templates/dissertations.html
+++ b/templates/dissertations.html
@@ -123,7 +123,7 @@
           <div class="col-md-5">
             <h4 class="media-heading">
                 <a href="{% url 'manager_offer_parameters' %}" id="lnk_manager_offer_parameters" >
-                    {% trans 'Settings' %}
+                    {% trans 'Settings' context 'dissertation' %}
                 </a>
             </h4>
             <p>{% trans 'Settings of the Dissertation application' %}</p>
