--- a/templates/dissertations_wait_list.html
+++ b/templates/dissertations_wait_list.html
@@ -50,9 +50,9 @@
                 </div>
                   <table class="table table-hover">
                     <tr>
-                      <th>{% trans 'Title'%}</th>
+                      <th>{% trans 'Title' context 'dissertation' %}</th>
                       <th>{% trans 'Author'%}</th>
-                      <th>{% trans 'Status'%}</th>
+                      <th>{% trans 'Status' context 'dissertation' %}</th>
                       <th>{% trans 'Program'%}</th>
                       <th>{% trans 'year beginning'%}</th>
                     </tr>
