--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -314,7 +314,7 @@
 {% endblock %}
 {% block script %}
 <script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.min.js' %}"></script>
 <script>
     $(document).ready(function()
     {
