--- a/templates/manager_informations_list.html
+++ b/templates/manager_informations_list.html
@@ -94,7 +94,7 @@
 
 {% block script %}
     <script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.min.js' %}"></script>
     <script>
         $(document).ready(function()
         {
