--- a/templates/manager_students_list.html
+++ b/templates/manager_students_list.html
@@ -133,7 +133,7 @@
 {% block script %}
     <script type="text/javascript" src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.min.js' %}"></script>
 
     <script>
         $(document).ready(function()
