--- a/templates/manager_students_list.html
+++ b/templates/manager_students_list.html
@@ -49,7 +49,7 @@
                 <table class="table table-hover" id="students-list">
                     <thead>
                         <tr>
-                            <th>{% trans 'Student' %}</th>
+                            <th>{% trans 'Student' context 'dissertation' %}</th>
                             <th>{% trans 'Programs and enrollements status'%}</th>
                             <th>{% trans 'Status' context 'dissertation' %}</th>
                             <th>{% trans 'Dissertation' %}</th>
