--- a/templates/manager_students_list.html
+++ b/templates/manager_students_list.html
@@ -118,7 +118,7 @@
                         <tr>
                             <th>{{ students_title|title }}</th>
                             <th>{% trans 'Programs' %}</th>
-                            <th>{% trans 'Status' %}</th>
+                            <th>{% trans 'Status' context 'dissertation' %}</th>
                             <th>{% trans 'Dissertation' %}</th>
                         </tr>
                     </tfoot>
