--- a/templates/manager_dissertations_wait_list.html
+++ b/templates/manager_dissertations_wait_list.html
@@ -26,7 +26,7 @@
  * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-  <link rel="stylesheet" href="{% static 'css/bootstrap5/dataTables.bootstrap5.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/dataTables/dataTables.bootstrap5.min.css' %}">
 {% endblock %}
 
 {% block breadcrumb %}
@@ -119,8 +119,8 @@
   </div>
 {% endblock %}
 {% block script %}
-<script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/dataTables/jquery.dataTables.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/dataTables/dataTables.bootstrap5.min.js' %}"></script>
 <script>
     $(document).ready(function()
     {
