--- a/templates/manager_informations_list_request.html
+++ b/templates/manager_informations_list_request.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block style %}
-  <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/dataTables/dataTables.bootstrap3.min.css' %}">
 {% endblock %}
 
 {% block breadcrumb %}
@@ -72,8 +72,8 @@
 {% endblock %}
 
 {% block script %}
-  <script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/dataTables/jquery.dataTables.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/dataTables/dataTables.bootstrap5.min.js' %}"></script>
     <script>
         $(document).ready(function()
         {
