--- a/templates/manager_proposition_dissertations_list.html
+++ b/templates/manager_proposition_dissertations_list.html
@@ -113,8 +113,8 @@
 {% endblock %}
 
 {% block script %}
-<script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/dataTables/jquery.dataTables.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/dataTables/dataTables.bootstrap5.min.js' %}"></script>
 <script>
     $(document).ready(function()
     {
